{
    "name": "MouseControls",
    "maps": [
        {
            "name": "PlayerMouse",
            "id": "775ec04e-733f-4a52-8c98-584aed21e29b",
            "actions": [
                {
                    "name": "SelectCell",
                    "type": "Button",
                    "id": "095cc67b-b7ba-43d4-a34f-4f820971eb47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextWave",
                    "type": "Button",
                    "id": "728750dc-e690-40d4-8188-9503edb97df0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "9cf74b30-38d4-4e2f-86ea-fd4ff2a5ab56",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "386152a8-e146-4c5c-b1e6-388bbf1f238e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectCell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db066e79-8ff8-493c-997f-d53d150673fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "689c8f8c-81d4-436a-901d-a6edf9a93afa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "NextWave",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}